# SeeChange

./: .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS  LICENSE  Makefile.am  Makefile.in  README.md  configure.ac  default_config.yaml  default_config_extragalactic.yaml  default_config_galactic.yaml  requirements.txt  ruff.toml
alembic/: env.py
conductor/: Makefile  local_overrides_rknop-dev.yaml  rkauth_flask.py  run_conductor.sh  seechange_conductor.yaml  updater.py  webservice.py
devshell/: docker-compose.yaml  seechange_devshell.yaml
docs/: coadd_pipeline.md  conf.py  configuration.md  contribution.md  data_storage.md  data_storage.rst  development.rst  index.rst  instruments.md  miscellaneous.md  overview.md  overview.rst  pipeline.md  references.md  requirements.txt  run_locally.md  setup.md  setup.rst  testing.md  troubleshooting_sqla.md  usage.rst  versioning.md
improc/: Makefile.am  Makefile.in  alignment.py  bijaouisky.py  bitmask_tools.py  inpainting.py  photometry.py  scamp.py  sextractor.py  sextrsky.py  simulator.py  sky_flat.py  tools.py  zogy.py
models/: Makefile.am  Makefile.in  __init__.py  background.py  base.py  calibratorfile.py  catalog_excerpt.py  cutouts.py  datafile.py  decam.py  deepscore.py  enums_and_bitflags.py  exposure.py  fakeset.py  image.py  instrument.py  instruments.py  knownexposure.py  measurements.py  object.py  objects.py  provenance.py  psf.py  ptf.py  reference.py  references.py  refset.py  report.py  source_list.py  user.py  world_coordinates.py  zero_point.py
pipeline/: Makefile.am  Makefile.in  acquire_decam_refs.py  alerting.py  alignment.py  astro_cal.py  astrometry.py  backgrounding.py  calibrator.py  catalog_tools.py  coaddition.py  configchooser.py  cutter.py  cutting.py  data_store.py  detection.py  detector.py  exposure_processor.py  fakeinjection.py  measurement.py  measurer.py  measuring.py  parameters.py  photo_cal.py  pipeline.py  pipeline_exposure_launcher.py  positioner.py  preprocessing.py  preprocessor.py  ref_maker.py  scoring.py  subtraction.py  subtractor.py  top_level.py  utils.py
share/: Makefile.am  Makefile.in
share/RBbot_models/: RBbot-feasible-disco-117-config.json  RBbot-feasible-disco-117.pth  RBbot-quiet-shadow-131-config.json  RBbot-quiet-shadow-131-cut0.55.pth
share/astromatic/: detection_sextractor.param  sourcelist_sextractor.param  sourcelist_sextractor_with_psf.param
share/avsc/: README.md  ls4.v0_1.alert.avsc  ls4.v0_1.diaForcedSource.avsc  ls4.v0_1.diaNonDetectionLimit.avsc  ls4.v0_1.diaObject.avsc  ls4.v0_1.diaSource.avsc
share/gaia_density/: README.md  gaia_healpix_density.pq  gen_gaiadr3_density.py  plot_gaia_density.py
util/: Makefile.am  Makefile.in  archive.py  cache.py  classproperty.py  conductor_connector.py  config.py  exceptions.py  fits.py  ldac.py  logger.py  radec.py  retrydownload.py  rkauth_client.py  runner.py  util.py
(+267 files in other folders)
