modeldir = @installdir@/models
model_SCRIPTS = __init__.py base.py calibratorfile.py catalog_excerpt.py cutouts.py datafile.py \
	decam.py enums_and_bitflags.py exposure.py image.py instrument.py knownexposure.py \
	measurements.py object.py provenance.py psf.py ptf.py reference.py report.py source_list.py \
	user.py world_coordinates.py zero_point.py
