pipelinedir = @installdir@/pipeline
pipeline_SCRIPTS = __init__.py acquire_decam_refs.py alerting.py astro_cal.py backgrounding.py catalog_tools.py \
	coaddition.py cutting.py data_store.py exposure_processor.py detection.py measuring.py parameters.py \
	photo_cal.py pipeline_exposure_launcher.py preprocessing.py ref_maker.py scoring.py subtraction.py \
	top_level.py
