sharedir = @installdir@/share
share_DATA = RBbot_models/RBbot-feasible-disco-117-config.json \
	RBbot_models/RBbot-feasible-disco-117.pth \
	RBbot_models/RBbot-quiet-shadow-131-config.json \
	RBbot_models/RBbot-quiet-shadow-131.pth \
	avsc/ls4.v0_1.alert.avsc \
	avsc/ls4.v0_1.diaNonDetectionLimit.avsc \
	avsc/ls4.v0_1.diaSource.avsc \
	avsc/ls4.v0_1.diaForcedSource.avsc \
	avsc/ls4.v0_1.diaObject.avsc
